# stormlead

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  opencode.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.codex/: README.md  config.toml
.docker/: README.md  mcp-profile-docker.json  mcp-profile-kubernetes.json
.github/workflows/: ci.yml  smoke.yml
.opencode/commands/: qc.md
apps/buyer-portal/: Dockerfile  main.py  pyproject.toml
apps/buyer-portal/templates/: base.html  leads.html  login.html  review.html  wallet.html
apps/buyer-portal/tests/: test_buyer_local_demo_gate.py
apps/landing/: Dockerfile  main.py  pyproject.toml
apps/landing/templates/: index.html
apps/landing/tests/: test_local_demo_gate.py
docs/: legal-review.md
docs/execution-prompts/: 2026-05-04-build-execution-prompt.md  2026-05-04-stormlead-feature-complete-dispatch.md  2026-05-04-tooling-and-agent-safety-review-prompt.md  2026-05-04-v1-execution-prompt.md  2026-05-04-visual-agentic-workflow-execution-prompt.md  2026-05-05-first-launch-gate-gap-closure.md  2026-05-05-playwright-test-suite-prompt.md  2026-05-06-finish-lead-gen-self-learning.md  README.md  master-agent-execution-prompt.md
docs/research/: 2026-05-04-build-execution-prompt.md  2026-05-04-ops-dashboard-spec.md  2026-05-04-project-improvement-plan.md  2026-05-04-self-hosted-agentic-leadgen-plan.md  2026-05-04-self-hosted-agentic-leadgen-upgrade.md  2026-05-04-v1-execution-prompt.md  2026-05-04-visual-agentic-workflow-execution-prompt.md  2026-05-04-visual-agentic-workflow-leadgen.md  2026-05-agent-auth-patterns.md  2026-05-agent-runtime-retry-runbook.md  2026-05-architectural-fit.md  2026-05-end-to-end-automation-roadmap.md  2026-05-forkable-stack.md  2026-05-prod-ops-playbook.md  2026-05-stack-audit.md  2026-05-stack-improvements.md  README.md  boot-validation.md  current-milestone-validation.md  (+6 more)
libs/stormlead_core/: pyproject.toml
libs/stormlead_core/src/stormlead_core/: __init__.py  compliance.py  dedup.py  env_gate.py  events.py  filters.py  logging.py  models.py  object_storage.py  observability.py  pipeline.py  provider_safety.py  replay.py
libs/stormlead_core/tests/: test_logging_redaction.py  test_object_storage.py  test_pipeline.py  test_provider_safety.py
libs/stormlead_db/: alembic.ini  pyproject.toml
libs/stormlead_db/migrations/: env.py
libs/stormlead_db/migrations/versions/: 0001_initial.py  0002_consent_audits.py  0003_paid_pilot_fields.py  0004_agent_runs.py  0004_buyer_constraints_and_audit_fields.py  0004_compliance_controls.py  0004_compliance_flows.py  0004_delivery_attempts.py  0004_lead_lifecycle.py  0004_lead_quality_and_fraud.py  0004_return_requests.py  0005_agent_run_tables.py  0005_lead_state_transitions.py  0006_v1_paid_pilot_controls.py  0007_skill_proposals.py  0008_buyer_crm.py  0009_timescale_hypertables.py  0010_lead_resale_dedup.py  0011_drop_lead_phone_hash_unique.py  0012_location_photo_metadata.py  0013_tree_damage_intake_fields.py  0014_consent_version.py  0015_structured_damage_review.py  0016_billing_event_external_event_id.py  0017_payment_webhook_events.py  0018_payment_customer_autorefill.py  0019_outreach_attempts_suppressions.py  0020_exception_queue.py  0021_campaign_spend_registry.py  0022_budget_action_logs.py  0023_learning_proposals.py
libs/stormlead_db/src/stormlead_db/: __init__.py  compliance.py  engine.py  posting.py  tables.py  transitions.py
libs/stormlead_db/tests/: test_lead_model.py  test_lead_state_transitions.py  test_migration_chain.py
scripts/: __init__.py  bootstrap.ps1  check_build_status.mjs  chrome_observe.mjs  clean_testing_artifacts.mjs  deploy.sh  init_db.py  live_admin_cowork.mjs  live_admin_demo.mjs  prepare_tars_exploration.mjs  replay_lead.py  retention.py  run_tars_exploration.mjs  seed_dev.py  self_learning_loop.mjs  simulate_v1_leads.py  smoke_deploy_path.sh  smoke_e2e.py  test_chrome_observer.mjs  validate_ingress_targets.mjs
services/agent-runtime/: Dockerfile  pyproject.toml
services/agent-runtime/src/agent_runtime/: __init__.py  auth.py  budget_pacing.py  compliance.py  config.py  execution.py  hermes.py  learning_canary.py  nurture.py  policy.py  qualify.py  returns.py  telemetry.py  worker.py
services/agent-runtime/src/agent_runtime/roles/: __init__.py  buyer_matcher.py  common.py  dispute_triager.py  lead_qualifier.py  market_sentinel.py  nurture_controller.py
services/agent-runtime/tests/: test_budget_pacing.py  test_execution_state_machine.py  test_hermes.py  test_learning_canary.py  test_litellm_policy.py  test_nurture.py  test_qualify_edge_cases.py  test_replay_plan.py
services/enrich-worker/: Dockerfile  pyproject.toml
services/enrich-worker/src/enrich_worker/: __init__.py  enrich.py  geocode.py  photo.py  worker.py
services/enrich-worker/tests/: test_enrich.py  test_geocode.py  test_photo.py
services/form-receiver/: Dockerfile  pyproject.toml
services/form-receiver/src/form_receiver/: __init__.py  api.py  call_tracking.py  compliance.py  schemas.py  signatures.py  storage.py
services/form-receiver/tests/: test_call_tracking.py  test_compliance.py  test_formbricks_api.py  test_signatures.py  test_storage.py
services/ping-post/: Dockerfile  pyproject.toml
services/ping-post/src/ping_post/: __init__.py  api.py  attribution.py  auction.py  buyer_activation.py  buyer_crm.py  guardrails.py  mailer.py  pre_auction.py
services/ping-post/tests/: test_auction.py  test_integration.py  test_mailer.py  test_pre_auction.py
services/storm-watcher/: Dockerfile  pyproject.toml
services/storm-watcher/src/storm_watcher/: __init__.py  fema.py  nws.py  nws.py:Zone.Identifier  tropycal_poller.py  worker.py
services/storm-watcher/tests/: test_fema.py  test_nws.py  test_tropycal.py  test_worker.py
services/voice-bridge/: Dockerfile  pyproject.toml
services/voice-bridge/src/voice_bridge/: __init__.py  main.py
services/voice-bridge/tests/: test_voice_bridge.py
testing/: README.md  evidence-summary.md
tools/: SANDBOX.md  TOOLS.md
(+95 files in other folders)
