[project]
name = "stormlead"
version = "0.1.0"
description = "agentic storm-chase tree-removal lead-gen"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/stormlead_core",
    "libs/stormlead_db",
    "services/ping-post",
    "services/storm-watcher",
    "services/agent-runtime",
    "services/form-receiver",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-watch>=4.2",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
    "aiohttp>=3.10",   # in-process buyer listeners for scripts/smoke_e2e.py
]

# pin a known-good litellm. as of audit: 1.82.7/1.82.8 were compromised.
# we never `pip install litellm` — only the cosign-verified docker image runs.
# python services talk to it via openai-compatible http.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]  # asserts ok in tests
"scripts/**" = ["S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services", "libs"]
