[project]
name = "stormlead-buyer-portal"
version = "0.1.0"
description = "StormLead buyer portal scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.32",
]

[tool.uv]
package = false
