[project]
name = "stormlead-core"
version = "0.1.0"
description = "shared models, events, and utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "structlog>=24.4",
    "cel-python>=0.3",  # cel evaluator for buyer filters (imports as `celpy`)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stormlead_core"]
