[project]
name = "stormlead-db"
version = "0.1.0"
description = "sqlalchemy models, migrations, repositories"
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    "geoalchemy2>=0.16",
    "pgvector>=0.3",
    "asyncpg>=0.30",
]

[tool.uv.sources]
stormlead-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stormlead_db"]
