[project]
name = "agent-runtime"
version = "0.1.0"
description = "claude-agent-sdk workers: complex-lead qualification (opus) + hermes self-evolution (weekly cron)"
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "stormlead-db",
    "claude-agent-sdk>=0.1",
    "hatchet-sdk>=0.50",
    "structlog>=24.4",
    "anyio>=4.6",
]

[tool.uv.sources]
stormlead-core = { workspace = true }
stormlead-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]
