[project]
name = "enrich-worker"
version = "0.1.0"
description = "Hatchet worker for deterministic lead enrichment"
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "stormlead-db",
    "hatchet-sdk>=0.50",
    "httpx>=0.27",
    "structlog>=24.4",
]

[tool.uv.sources]
stormlead-core = { workspace = true }
stormlead-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enrich_worker"]
