[project]
name = "form-receiver"
version = "0.1.0"
description = "formbricks webhook receiver. validates signature, stores consent audit, emits lead.captured"
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "stormlead-db",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "phonenumbers>=8.13",
    "boto3>=1.35",
    "structlog>=24.4",
    "nats-py>=2.9",
]

[tool.uv.sources]
stormlead-core = { workspace = true }
stormlead-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/form_receiver"]
