[project]
name = "form-receiver"
version = "0.1.0"
description = "formbricks webhook receiver — standard-webhooks sig verify + tcpa consent audit + lead.captured event emission"
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "stormlead-db",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "hatchet-sdk>=0.50",
    "phonenumbers>=8.13",
    "email-validator>=2.2",
    "structlog>=24.4",
]

[tool.uv.sources]
stormlead-core = { workspace = true }
stormlead-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/form_receiver"]
