[project]
name = "ping-post"
version = "0.1.0"
description = "the auction engine. fans out parallel pings to buyer roster, picks winner, posts."
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "stormlead-db",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "hatchet-sdk>=0.50",       # python sdk, official
    "anyio>=4.6",
    "structlog>=24.4",
    "tenacity>=9.0",
]

[tool.uv.sources]
stormlead-core = { workspace = true }
stormlead-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ping_post"]
