[project]
name = "storm-watcher"
version = "0.1.0"
description = "polls nws/nhc/fema, normalizes events, fires hatchet workflows"
requires-python = ">=3.12"
dependencies = [
    "stormlead-core",
    "stormlead-db",
    "httpx>=0.27",
    "feedparser>=6.0",
    "tropycal>=1.2",
    "hatchet-sdk>=0.50",
    "structlog>=24.4",
    "anyio>=4.6",
]

[tool.uv.sources]
stormlead-core = { workspace = true }
stormlead-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storm_watcher"]
