[project]
name = "voice-bridge"
version = "0.1.0"
description = "local-safe voice follow-up preview service for qualified StormLead leads"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_bridge"]
